--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -156,93 +156,16 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Find information is already available</h1> 
-	<p>You can get many types of information from the Canada Revenue Agency (CRA) without the need for a formal information request, including: </p> 
-  <ul class="fa-ul">
-			<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Copies of individual’s tax slips </li>
-			<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Business information returns </li> 
-    <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>The CRA’s policy manuals </li>
-		</ul> 
-   <section class="alert alert-info">
-  <h3>CRA does not have</h3>
- <ul> 
-  <li>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html">Service Canada.</a></li> 
-   <li>Information about your travel history outside Canada. Go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html">Canada Border Services Agency.</a></li>
- </ul>
-</section>
+		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request h1> 
+	<p>Once you have gathered all the required information, you can submit your access to information and privacy (ATIP) requests through two methods: </p> 
 
-<h2 class="h3">On this page</h2>
-        <ul>
-          <li><a href="#personal">Access personal information</a></li>
-          <li><a href="#business">Access business information  </a></li> 
-          <li><a href="#CRA">CRA’s information holdings </a></li>
-          <li><a href="#charities">Information about registered charities </a></li> 
-          <li><a href="#other">Other information available online</a></li>
-        </ul>	
-<h2 id="personal">Access your personal information</h2>
-<p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account for your:</a></p> 
-  <ul> 
-    <li>Personal income tax returns</li>  
-    <li>Information slips (for example, T4, T4A, or T5 slips, and RRSP receipts)</li> 
-    <li>Notices of assessment or reassessment</li>  
-    <li>Statements of income and deductions for previous tax years </li> 
-    <li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>  
-    <li>Personal information, such as your address, direct deposit information and representative authorizations</li>
-  </ul> 
-  <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a>
-Or call the individual tax enquiries line at 1-800-959-8281 to request tax and benefit documents. 
-</p>  
-	
-<h2 id="business">Access your business information </h2>
-<p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account for your:</a></p> 
-  <ul> 
-    <li>Tax returns</li>  
-    <li>Corporate account balance</li> 
-    <li>Account transactions</li>  
-    <li>notices of assessment or reassessment</li>
-  </ul> 
-  <p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html"></a>What can I do on my Business Account.
-Or call the business enquiries line at 1-800-959-5525 to request corporate income tax documents.  
-</p> 
+<h2 class="h3">By mail </h2> 
+<p>Send everything listed under <a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a>  in your letter or Completed <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request Form</a> to the following address:</p> 
+<p>Director General, ATIP Directorate<br>
+Canada Revenue Agency<br>
+555 MacKenzie Avenue, 5th Floor<br>
+Ottawa ON&nbsp; K1A 0L5&nbsp;</p>
 
-<h2 id="CRA">CRA's information holdings</h2>
-<p>Many of the records held by the Canada Revenue Agency (CRA)  are readily accessible to the public, this includes:</p> 
-  <ul> 
-    <li>Policy manuals </li>  
-    <li>Financial records </li> 
-    <li>Account transactions</li>  
-    <li>Information about government operations </li>
-  </ul> 
-  <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source and the Reading Room Services</a> to explore available information.
-</p> 
-<h2 id="charities">Access information about registered charities </h2>  
-<p>Accessing information about registered charities and other qualified donee does not require a formal request. Here are ways you can obtain this information quickly and at no cost: </p>
-  <ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
-  <li class="cnjnctn-col"> 
-    <h3>Online list of charities and other qualified donee:</h3>
-    <p>The CRA maintains a <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities and other qualified donees</a>. This searchable database allows you to view information about each organization, including their status and publicly available financial documents. </p>
-  </li>
-  <li class="cnjnctn-col"> 
-    <h3>Informal requests for charity information: </h3>
-    <p>If you need more information about a particular charity or other qualified donees, you can make an informal request. This is often faster and more direct than going through a formal request. For guidance on how to make an informal request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">Request registered charity information</a>.</p>
-  </li>
-</ul>
-  <p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.
-</p> 
-<h2 id="other">Other information available online</h2>
-<p>In support of our committed to transparency, you can also find the following information online:</p> 
-  <ul> 
-    <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">	Previously completed access to information requests</a></li>  
-    <li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&owner_org=cra-arc&page=1&sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>   
-    <li><a href="https://search.open.canada.ca/travelq/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
-    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Hospitality expenditures for senior CRA officials</a></li>   
-    <li><a href="https://search.open.canada.ca/contracts/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>   
-    <li><a href="https://search.open.canada.ca/grants/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
-    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a></li>  
-    <li><a href="https://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>  
-    <li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>   
-    <li><a href="https://search.open.canada.ca/opendata/?sort=&q=canada+revenue+agency&organization=cra-arc">Open Data </a></li> 
-  </ul> 
  <!-- Pagination -->
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
