--- a/contact-us.html
+++ b/contact-us.html
@@ -157,7 +157,46 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1> 
-	<p>Our ATIP general mailbox representatives can provide you with: </p> 
+  <p><Strong>Telephone:</Strong></p> 
+  <ul> 
+    <li>613-960-5393 (Ottawa area)</li> 
+    <li>1-866-333-5402 (toll free)</li>
+  </ul> 
+ <dl class="dl-horizontal brdr-0">
+            <dt>Hours:</dt>
+            <dd>
+              <table class="table">
+                <caption class="wb-inv">
+                Dedicated hours
+                </caption>
+                <thead>
+                  <tr>
+                    <th class="wb-inv" scope="col">Day</th>
+                    <th class="wb-inv" scope="col">Hours</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Monday to Friday</td>
+                    <td><strong>9&nbsp;am to 6&nbsp;pm</strong> (local time)</td>
+                  </tr>
+                  <tr>
+                    <td>Saturday</td>
+                    <td>Closed</td>
+                  </tr>
+                  <tr>
+                    <td>Sunday</td>
+                    <td>Closed</td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">Closed on <a href="/en/revenue-agency/services/tax/public-holidays.html">public holidays</a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </dd>
+          </dl> 
+  <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
+  	<p>Our ATIP general mailbox representatives can provide you with: </p> 
   <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 	<li class="cnjnctn-col">
 	 General information on how to <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/step-2-make-access-information-personal-information-request.html">make an access to information or personal information request</a> to the CRA.
@@ -169,14 +208,6 @@
 	</li>
 </ul>
 
-  <p><Strong>Telephone:</Strong></p> 
-  <ul> 
-    <li>613-960-5393 (Ottawa area)</li> 
-    <li>1-866-333-5402 (toll free)</li>
-  </ul> 
-  
-  <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
-  
 
  <section class="panel panel-default">
   <header class="panel-heading">
