--- a/contact-us.html
+++ b/contact-us.html
@@ -157,12 +157,16 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1> 
-  <p><Strong>Telephone:</Strong></p> 
+ <!-- <p><Strong>Telephone:</Strong></p> 
   <ul> 
     <li>613-960-5393 (Ottawa area)</li> 
     <li>1-866-333-5402 (toll free)</li>
-  </ul> 
- <dl class="dl-horizontal brdr-0">
+  </ul> --> 
+<dl class="dl-horizontal brdr-0">
+            <dt><strong>Telephone number:</strong></dt>
+            <dd><a class="hidden-md hidden-lg nowrap" href="tel:613-960-5393"><span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393</strong></dd 
+																														 
+<dd><a class="hidden-md hidden-lg nowrap" href="tel:1-866-333-5402"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-333-5402<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"></span>613-960-5393</strong></dd>
             <dt>Hours:</dt>
             <dd>
               <table class="table">
@@ -194,7 +198,8 @@
                 </tbody>
               </table>
             </dd>
-          </dl> 
+          </dl>
+
   <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
   	<p>Our ATIP general mailbox representatives can provide you with: </p> 
   <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
